--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!--Common-->
     <string name="loading">Loading…</string>
+    <string name="please_wait">Please wait…</string>
+    <string name="check_your_internet">Check your internet connection and try again later.</string>
 
     <!--Main Activity-->
     <string name="movies">Movies</string>
